services/sonarr/resources/sonarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: truenas-media
              mountPath: /media
          ports:
            - name: web
              containerPort: 8989

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: service
      port:
        name: web
  tls:
    - hosts:
        - sonarr
